--- a/css/style.css
+++ b/css/style.css
@@ -12158,14 +12158,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12180,14 +12180,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12224,14 +12224,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12246,14 +12246,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(2deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(2deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12268,14 +12268,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(6) {
   z-index: 5;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(6):before {
   content: "6";
 }
 .slyde:nth-child(6).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12290,56 +12290,12 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(8) {
-  z-index: 3;
-  transform: rotate(3deg) translate(-50%, -50%);
-}
-.slyde:nth-child(8):before {
-  content: "8";
-}
-.slyde:nth-child(8).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(9) {
-  z-index: 2;
-  transform: rotate(-2deg) translate(-50%, -50%);
-}
-.slyde:nth-child(9):before {
-  content: "9";
-}
-.slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
   transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
@@ -12354,16 +12310,60 @@ Copyright (c) 2015 Daniel Eden
   opacity: 1;
 }
 
+.slyde:nth-child(8) {
+  z-index: 3;
+  transform: rotate(-4deg) translate(-50%, -50%);
+}
+.slyde:nth-child(8):before {
+  content: "8";
+}
+.slyde:nth-child(8).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(-4deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
+.slyde:nth-child(9) {
+  z-index: 2;
+  transform: rotate(1deg) translate(-50%, -50%);
+}
+.slyde:nth-child(9):before {
+  content: "9";
+}
+.slyde:nth-child(9).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(1deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -14430,6 +14430,11 @@ li.has-dropdown:hover .submenu li a {
   right: 44px !important;
 }
 
+@media screen and (max-width: 768px) {
+  .banner-four-area:not(.league-page-body-mens) {
+    background-position: center center;
+  }
+}
 .about-banner-area-bg {
   background-image: url(../images/about/01.webp);
   height: 750px !important;
@@ -17079,6 +17084,8 @@ section.cta .rts-cts-area .cta-one-wrapper .right:after {
   section.cta .rts-cts-area .cta-one-wrapper .left-area .title {
     font-size: 35px;
     line-height: 120%;
+    font-size: 33px;
+    line-height: 110%;
   }
   section.cta .rts-cts-area .cta-one-wrapper .left-area p {
     margin-bottom: 2rem;
@@ -22811,6 +22818,9 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
   padding-top: 5rem;
   padding-bottom: 17rem;
 }
+.contact-page-body .rts-location-contact-area {
+  padding-top: 7rem;
+}
 .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact .icon {
   display: inline-block;
   position: relative;
@@ -23416,6 +23426,50 @@ footer .rts-copyright-area-one .new-row p {
   section.perks .container .row [class*=col] a {
     margin-bottom: 3rem;
   }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box {
+    position: relative;
+    left: -2px;
+    bottom: 0;
+    top: unset;
+    right: unset;
+    border-radius: 21px;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.match-play {
+    top: unset;
+    left: -2px;
+    bottom: 2rem;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.masters {
+    padding: 1.75rem 2.75rem 1.95rem 2.75rem;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.masters .masters-logo {
+    width: 70px;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.match-play {
+    padding: 0 12px 1px 12px;
+    left: -2px;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.match-play .match-play-logo {
+    width: 150px;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.fourth {
+    left: -2px;
+    padding: 0;
+    left: 0;
+    bottom: 2rem;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.fourth .fourth-flags {
+    left: 0;
+    width: 150px;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.club-championship {
+    left: -2px;
+    bottom: 2rem;
+    padding: 12px 18px 8px 18px;
+  }
+  section.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.club-championship .club-championship-logo {
+    width: 175px;
+  }
 }
 @media screen and (max-width: 768px) {
   .membership-page-body .container .row .col h2 {
@@ -23438,7 +23492,8 @@ footer .rts-copyright-area-one .new-row p {
     border-top: 1.5px solid rgba(0, 0, 0, 0.05);
   }
   section.sponsors-section .container .row .title-center-2 .title {
-    font-size: 37px;
+    font-size: 33px;
+    line-height: 110%;
     margin-bottom: 15px;
   }
   section.sponsors-section .container .row [class*=col] .single-solution-style-one {
@@ -23503,11 +23558,137 @@ footer .rts-copyright-area-one .new-row p {
     font-size: 33px;
     line-height: 110%;
   }
-  section.league-page-body .container-consulting .single-consulting-one {
+  section.league-page-body .container-consulting .consulting-step {
+    margin-top: 0;
+  }
+  section.league-page-body .container-consulting .consulting-step .single-consulting-one {
     padding-left: 1rem;
   }
-  section.league-page-body .container-consulting .single-consulting-one .timeline-dot {
+  section.league-page-body .container-consulting .consulting-step .single-consulting-one .timeline-dot {
     left: 0.47%;
+  }
+  section.open-tournaments-page-body .container .container-consulting .row .title-center-style-two h2 {
+    font-size: 33px;
+    line-height: 110%;
+  }
+  section.open-tournaments-page-body .container .container-consulting .row [class*=col] .consulting-step {
+    margin-top: 0;
+  }
+  section.open-tournaments-page-body .container .container-consulting .row [class*=col] .consulting-step .single-consulting-one {
+    padding-left: 1rem;
+    margin-bottom: 5rem;
+  }
+  section.open-tournaments-page-body .container .container-consulting .row [class*=col] .consulting-step .single-consulting-one .timeline-dot {
+    left: 0.5%;
+  }
+  section.sponsors-section-on-open-tournaments-page .schedule-note {
+    width: 80%;
+    font-size: 16px;
+    line-height: 120%;
+    text-align: center;
+    border-top: 1px solid rgb(222, 222, 222);
+    margin-top: 2rem;
+    padding-top: 1.75rem;
+  }
+  section.members-only-events-page-body {
+    padding-top: 0;
+  }
+  section.members-only-events-page-body .event-wrapper {
+    padding: 7rem 0;
+  }
+  section.members-only-events-page-body .event-wrapper.member-guest-event-wrapper {
+    padding-top: 5rem;
+  }
+  section.members-only-events-page-body .event-wrapper .career-banner-wrapper .title {
+    font-size: 33px;
+    line-height: 110%;
+  }
+  section.members-only-events-page-body .event-wrapper .career-banner-wrapper p {
+    line-height: 150%;
+  }
+  .sponsorship-cta .container h3 {
+    font-size: 33px;
+    line-height: 110%;
+  }
+  section.instruction-page-body > .container .row.lined-row {
+    border: none;
+  }
+  section.instruction-page-body > .container .row.lined-row h3 {
+    font-size: 33px;
+    line-height: 110%;
+  }
+  section.instruction-page-body > .container .row.lined-row .shop-note {
+    line-height: 110%;
+  }
+  section.contact-page-body .container .rts-location-contact-area {
+    padding-top: 2rem;
+  }
+  section.contact-page-body .container .rts-location-contact-area .container .row [class*=col] {
+    margin-top: 7rem;
+  }
+  section.contact-page-body .rts-google-map-area .container .row [class*=col] .directions-addendum {
+    padding: 4rem 2.5rem 4rem 2.5rem;
+  }
+  section.contact-page-body .rts-google-map-area .container .row [class*=col] .directions-addendum p {
+    line-height: 149%;
+    font-size: 15px;
+  }
+  section#donation-request .container .row p {
+    line-height: 149%;
+    font-size: 15px;
+  }
+  section.meet-the-staff-page-body .container .rts-location-contact-area {
+    padding-top: 3rem;
+  }
+  section.meet-the-staff-page-body .container .rts-location-contact-area .container .row [class*=col-] {
+    margin-top: 5rem;
+  }
+  section.meet-the-staff-page-body .container .rts-location-contact-area .container .row [class*=col-] .single-location-area-contact .pga-memb-logo {
+    width: 72px;
+    top: -1.5rem;
+    right: 6rem;
+  }
+  section.meet-the-staff-page-body .container .rts-location-contact-area .container .row [class*=col-] .single-location-area-contact .staff-photo {
+    width: 50%;
+    margin-bottom: 2rem;
+  }
+  section.board.mobile-padding .container .row {
+    border-top: none;
+  }
+  section.board.mobile-padding .container .row [class*=col-] h3 {
+    font-size: 33px;
+    line-height: 110%;
+    border-top: 1.5px solid #ececec;
+    padding-top: 3rem;
+    margin-bottom: 0;
+  }
+  section.board.mobile-padding .container .row [class*=col-] .completed-applications {
+    font-size: 16px;
+    line-height: 26px;
+  }
+  section.board.mobile-padding .container .row [class*=col-] ul.board-list {
+    padding-left: 0;
+    margin-top: 0;
+  }
+  section.board.mobile-padding .container .row [class*=col-] ul.board-list li {
+    padding-left: 3px;
+    font-size: 16px;
+    padding-bottom: 0;
+    line-height: 135%;
+    letter-spacing: 0.25px;
+  }
+  section.board.mobile-padding .container .row [class*=col-] a {
+    margin-top: 2rem;
+  }
+  section.board.mobile-padding .container .row [class*=col-]:nth-of-type(2) {
+    margin-top: 2rem;
+  }
+  section.board.mobile-padding .container .row .right-bit p {
+    font-size: 16px;
+    line-height: 26px;
+  }
+  section.board.mobile-padding .container.chair-container {
+    margin-top: 5rem;
   }
 }
 @media screen and (max-width: 576px) {
