--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -278,7 +278,7 @@ section.sponsors-section {
   .shape {
     bottom: 9rem;
     z-index: 3;
-    filter: blur(2px);
+    // filter: blur(2px);
   }
 }
 
